js/js.translator/testData/incremental/invalidation/companionPropertiesWithCrossModuleInliner/lib2/l2func.4.kt
inline fun testFuncProperty(): Int {
    return MyClass.funcProperty()
}
